--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ android {
         it.buildConfigField "String", "IMDb_API_KEY", imdbApiKey
     }
 
-
     buildTypes {
         release {
             minifyEnabled false
@@ -65,4 +64,17 @@ dependencies {
     //RX
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.2'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    //Room
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
+
+    //Stetho
+    implementation 'com.facebook.stetho:stetho:1.6.0'
+    implementation 'com.facebook.stetho:stetho-urlconnection:1.6.0'
+    implementation 'com.facebook.stetho:stetho-js-rhino:1.6.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
 }
