--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,9 +67,13 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
 
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:2.4.2"
+
     //RX
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.2'
+
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -77,6 +81,7 @@ dependencies {
     //Room
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
+
 
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.6.0'
