--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,7 @@ dependencies {
     //Koin
     implementation "io.insert-koin:koin-android:3.1.6"
     implementation "io.insert-koin:koin-core:3.1.6"
+
+    //YoutubePlayer
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 }
