--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,19 +71,12 @@ dependencies {
     // optional - RxJava3 support for Room
     implementation "androidx.room:room-rxjava3:2.4.2"
 
-    //RX
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.2'
-
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     //Room
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
-    implementation "androidx.room:room-rxjava2:2.4.2"
-
 
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.6.0'
@@ -101,4 +94,9 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 }
