--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,19 +64,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
-    //Room
-    implementation 'androidx.room:room-runtime:2.4.2'
-    kapt 'androidx.room:room-compiler:2.4.2'
-
-    // optional - RxJava3 support for Room
-    implementation "androidx.room:room-rxjava3:2.4.2"
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     //Room
-    implementation 'androidx.room:room-runtime:2.4.2'
-    kapt 'androidx.room:room-compiler:2.4.2'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation("androidx.room:room-ktx:2.4.3")
 
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.6.0'
@@ -98,5 +92,4 @@ dependencies {
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 }
